[codemonkey] Fixed warnings, javadoc, tests
- Added serialVersionUID to serializable classes:
  - PSDbMetadataEntry, PSDbMetadataProperty (metadata module)
  - PSPoll, PSPollAnswer (polls module)
  - AntJobFailedException (delivery-tier-distribution)

- Fixed deprecated Double(String) -> Double.valueOf() in PSDbMetadataProperty

- Fixed raw type: Query -> Query<Object> in PSMetadataDao
- Fixed raw type: Query -> Query<Object[]> in PSMetadataQueryService

Note: Build excludes delivery-tier-distribution and perc-distribution-tree
due to missing dependency artifacts (perc-jetty zip, perc-ant jar)